feat: let admin reopen voting
